# spotlight

./: .gitignore  CMakeLists.txt  CMakePresets.json
Source/: Common.hpp  Input.cpp  Input.hpp  Main.cpp  Renderer.cpp  Renderer.hpp  Win32Window.cpp  Window.hpp
